# PinTemplate

./: README.md  pincfg.txt
Demo/: README.md
Demo/AntiVMDectection/: .gitignore  CMakeLists.txt  README.md  pincfg.txt
Demo/AntiVMDectection/src/: README.MD
Demo/AntiVMDectection/src/Main/: README.MD  main.cpp
Template/: .gitignore  CMakeLists.txt  mk.bat
Template/bld32/: README.MD
Template/workspace/: README.MD
bld64/: README.MD
src/: CMakeLists.txt
src/Main/: CMakeLists.txt
